# gd-plat

./: .env  Cargo.toml  go.mod
cmd/: main.go
src/: main.rs
